scroll bar jumping fix

--- a/src/web/src/css/components/nav-sidebar.css
+++ b/src/web/src/css/components/nav-sidebar.css
@@ -9,21 +9,23 @@
   @media (--viewport-sm) {
     border-right: 1px solid var(--input-readonly-bg-color);
     height: 100vh;
-    overflow-y: auto;
+    left: 0;
+    overflow-y: scroll;
     padding-bottom: 150px;
     position: fixed;
   }
 }
 
 .sidebar--code {
-  border-right: 1px solid var(--input-readonly-bg-color);
   padding-right: 0;
   padding-top: 48px;
   outline: 0;
 
   @media (--viewport-sm) {
+    border-right: 1px solid var(--input-readonly-bg-color);
     height: 100vh;
-    overflow-y: auto;
+    left: 0;
+    overflow-y: scroll;
     padding-bottom: 150px;
     position: fixed;
   }
